--- a/app/src/main/res/layout/cart_sample.xml
+++ b/app/src/main/res/layout/cart_sample.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@color/white"
+    android:elevation="10dp"
+    android:padding="10dp"
+    android:layout_margin="10dp"
+    android:layout_height="wrap_content">
 
 
     <ImageView
@@ -12,24 +16,26 @@
         android:layout_height="130dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="15dp"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/cartSetName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:text="Product Name"
+        android:maxLines="1"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cartSetImage"
         app:layout_constraintTop_toTopOf="@+id/cartSetImage" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/cartSetPrice"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
@@ -37,6 +43,75 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cartSetImage"
         app:layout_constraintTop_toBottomOf="@+id/cartSetName" />
+
+    <LinearLayout
+        android:id="@+id/cartRemoveQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/quantity_shape"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/cartSetImage"
+        app:layout_constraintStart_toEndOf="@+id/cartSetImage"
+        app:layout_constraintTop_toBottomOf="@+id/cartSetPrice">
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/baseline_remove_24" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/cartSetQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:text="1"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        android:textStyle="bold "
+        app:layout_constraintBottom_toBottomOf="@+id/cartSetImage"
+        app:layout_constraintStart_toEndOf="@+id/cartRemoveQuantity"
+        app:layout_constraintTop_toBottomOf="@+id/cartSetPrice" />
+
+    <LinearLayout
+        android:id="@+id/cartAddQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+
+        android:background="@drawable/quantity_shape"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/cartSetImage"
+        app:layout_constraintStart_toEndOf="@+id/cartSetQuantity"
+        app:layout_constraintTop_toBottomOf="@+id/cartSetPrice">
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/baseline_add_24" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/cartDeleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/cartAddQuantity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cartAddQuantity"
+        app:srcCompat="@drawable/baseline_delete_24" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
